# FRC2025

./: .gitignore  README.md  Start Command Prompt.bat  advantagescope_layout.json  pyproject.toml  robot.py
docs/: Installation.md  NewCommandRecipe.md  NewSubsystemRecipe.md  Robot Localization with Limelight MegaTag2.md  SingletonPatternRecipe.md  git.md
src/robot/: __init__.py  pyproject.toml  robot.py  robot_container.py
src/robot/commands/: algae_idle_command.py  algae_intake_command.py  algae_outtake_command.py  auto_coral_outtake_command.py  autonomous_commands.py  coral_idle_command.py  coral_intake_command.py  coral_outtake_command.py  drive_forward_command.py  drive_to_goal.py  drive_with_joystick_command.py  elevator_command.py  elevator_down_command.py  elevator_idle_command.py  elevator_init_and_idle_command.py  elevator_nudge_down_command.py  elevator_nudge_up_command.py  elevator_up_command.py  follow_trajectory_command.py  print_something_command.py  reset_gyro_command.py  set_deadband_and_print.py  slow_mode_off_command.py  slow_mode_on_command.py  turn_to_angle_command.py  vision_auto_alignment_command.py
src/robot/constants/: algaeconsts.py  autoconsts.py  coralconsts.py  driveconstants.py  elevatorconstants.py  fieldconstants.py  new_types.py  operatorinterfaceconstants.py  visionconstants.py
src/robot/subsystems/: __init__.py  algae_subsystem.py  coral_subsystem.py  drive_subsystem.py  elevator_subsystem  elevator_subsystem.py  swerve_module.py  vision_subsystem.py
src/robot/tests/: drive_simulation_tests.py  drive_subsystem_test.py  drive_test.py  drive_to_goal_test.py  pyfrc_test.py
src/robot/util/: current_threshold.py  field_calculations.py  fieldcalcs.py  utils.py
src/sharkbot/: README.md  robotsystems.py  sharkbot.py
src/sharkbot/commands/: autonomous_command.py  command_template_python.txt
src/sharkbot/commands/drive/: drivewithjoysticks.py
src/sharkbot/components/: swervemodule.py
src/sharkbot/constants/: driveconstants.py  fieldconstants.py  operatorinterfaceconstants.py
src/sharkbot/subsystems/: drive.py  module
src/sharkbot/tests/: drivetests.py
src/sharkbot/util/: ntloggerutility.py
src/test/: motor_test_MAKO.py  pyproject.toml  robot.py
src/test/tests/: pyfrc_test.py  swerve_module_test.py  vision_subsystem_test.py
