[tool.poetry]
name = "frc2025"
version = "0.1.0"
description = "First Robotics Competition code for Team 3881 WHEA Sharkbots"
authors = ["WHEA Robotics"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [{ include = "sharkbot", from = "src" }]

[tool.poetry.dependencies]
python = "~3.13"
numpy = "^2.1.3"
opencv-python = "<4.10"
robotpy = {extras = ["commands2", "apriltag", "rev", "sim"],version="2025.2.1.0"}
wpilib = "^2025.0.1"
pynput = "^1.7.7"
rubicon-objc = "0.4.0"
pynetworktables = "^2021.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
graphviz = "^0.20.3"

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
