[project]
name = "robot"
version = "0.1.0"
description = "WHEA Robotics 2025 Robot Code"
requires-python = ">=3.13"
dependencies = [
    "robotpy==2025.2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.robotpy]
robotpy_version = "2025.2.1.0"
robotpy_extras = [
    "apriltag",
    "commands2",
    "phoenix6",
    "rev",
    "sim",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.1",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]