[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frc2025-robot"
version = "0.1.0"
description = "FRC 2025 Robot Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Team 3881: WHEA Robotics" }
]
dependencies = [
    "numpy >= 1.24.0",
    "wpilib >= 2025.3.1.1",
    "limelightlib-python == 0.9.6",
    "phoenix6",
    "cryptography",
    "paramiko"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.robotpy]
# Version of robotpy this project depends on
robotpy_version = "2025.3.1.1"

# Which extra RobotPy components should be installed
robotpy_extras = [
    "apriltag",
    "commands2",
    "phoenix6",
    "rev",
    "sim"
]

# Additional package requirements
requires = ["robotpy-rev==2025.0.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
include = ["commands*", "constants*", "subsystems*", "util*"]
exclude = ["deploy*", "logs*", "ctre_sim*"]
